# modern_cpp_ex

./: LICENSE  README.md
hw1/homework_1/task_1/: commands.sh
hw1/homework_1/task_2/: CMakeLists.txt  build.sh
hw1/homework_1/task_2/src/: CMakeLists.txt
hw2/homework_2/: CMakeLists.txt
hw2/homework_2/task1/: CMakeLists.txt
hw2/homework_2/task1/include/: rand_num.hpp
hw2/homework_2/task1/src/: CMakeLists.txt
hw2/homework_2/task1/src/app/: CMakeLists.txt  task1.cpp
hw2/homework_2/task1/src/lib/: CMakeLists.txt  rand_num.cpp
hw2/homework_2/task2/: CMakeLists.txt
hw2/homework_2/task2/src/: CMakeLists.txt
hw2/homework_2/task2/src/app/: CMakeLists.txt  task2.cpp
hw3/homework_3/: CMakeLists.txt  test.html
hw3/homework_3/src/app/: CMakeLists.txt  create_image.cpp
hw3/homework_3/src/lib/: CMakeLists.txt  html_writer.cpp  image_browser.cpp
hw3/homework_3/test/: CMakeLists.txt  test.cpp
hw4/homework_4/: CMakeLists.txt
hw4/homework_4/include/: homework_4.h
hw4/homework_4/src/: CMakeLists.txt
hw4/homework_4/src/app/: CMakeLists.txt  test.cpp  test_alg.cpp  test_named_vector.cpp
hw4/homework_4/src/lib/: CMakeLists.txt  algs.cpp  named_vector.cpp
hw4/homework_4/tests/: CMakeLists.txt  test_named_vector.cpp
hw5/homework_5/: CMakeLists.txt
hw5/homework_5/src/app/: CMakeLists.txt  read_binary.cpp  test_binary.cpp  test_convert.cpp  test_exr.cpp  test_imread.cpp  write_binary.cpp
hw5/homework_5/src/lib/: CMakeLists.txt  convert_dataset.cpp  serialize.cpp
hw5/homework_5/tests/: sifts_internal.cpp
hw6/homework_6/: CMakeLists.txt
hw6/homework_6/include/: Image.hpp  homework_6.h
hw6/homework_6/io_tools/: CMakeLists.txt  io_tools.cpp
hw6/homework_6/src/app/: CMakeLists.txt  test_hist.cpp  test_init.cpp  test_iotools.cpp  test_pgm.cpp  test_scale.cpp
hw6/homework_6/src/lib/: CMakeLists.txt  Image.cpp
hw7/homework_7/: CMakeLists.txt
hw7/homework_7/include/: bowdictionary.hpp  dis_imp.tpp  homework_7.h  serialize.hpp  utils.hpp
hw7/homework_7/src/app/: CMakeLists.txt  learncv.cpp  test.cpp  test_convert.cpp  test_dis.cpp  test_func.cpp  test_k.cpp
hw7/homework_7/src/lib/: CMakeLists.txt  bowdictionary.cpp  serialize.cpp  test.hpp  utils.cpp
hw7/homework_7/tests/: test_bow_dictionary.cpp  test_data.cpp  test_data.hpp  test_kmeans.cpp
hw8/homework_8/: CMakeLists.txt
hw8/homework_8/task_1/: CMakeLists.txt  stack_limit.cpp
hw8/homework_8/task_2/: CMakeLists.txt
hw8/homework_8/task_2/include/: Image.hpp  homework_8.h
hw8/homework_8/task_2/include/io_strategies/: dummy_strategy.hpp  png_strategy.hpp  ppm_strategy.hpp  strategy.hpp
hw8/homework_8/task_2/src/app/: CMakeLists.txt  test_ppm.cpp
hw8/homework_8/task_2/src/lib/: CMakeLists.txt  Image.cpp  dummy_strategy.cpp  png_strategy.cpp  ppm_strategy.cpp
hw8/homework_8/task_2/tests/: CMakeLists.txt
hw9/homework_9/: CMakeLists.txt
hw9/homework_9/include/: bowdictionary.hpp  histogram.hpp  homework_9.h  kMeans.hpp  utils.hpp
hw9/homework_9/src/app/: CMakeLists.txt  test.cpp
hw9/homework_9/src/lib/: CMakeLists.txt  bowdictionary.cpp  histogram.cpp  kMeans.cpp  utils.cpp
hw9/homework_9/tests/: CMakeLists.txt  test_histograms.cpp
project/: .gitignore  CMakeLists.txt  show_results.html
project/include/: bowdictionary.hpp  convert_dataset.hpp  histogram.hpp  html_writer.hpp  image_browser.hpp  kMeans.hpp  serialize.hpp  utils.hpp
project/others/: result_find.txt  result_find2.txt
project/src/app/: CMakeLists.txt  create_data_bin.cpp  create_dictionary.cpp  create_histograms.cpp  find_similar_imgs.cpp
project/src/lib/: CMakeLists.txt  bowdictionary.cpp  convert_dataset.cpp  histogram.cpp  html_writer.cpp  image_browser.cpp  kMeans.cpp  serialize.cpp  utils.cpp
project/tests/: CMakeLists.txt  Histogram.csv  Reweighted_histogram.csv  create_data_bin.cpp  show_results.html  test_binary.cpp  test_cosine_dis.cpp  test_creat_result.cpp  test_create_data_bin.cpp  test_data_type.cpp  test_dic_binary.cpp  test_gen_blabels.cpp  test_img_browser.cpp  test_kmean.cpp  test_word_occurrence.cpp
test/: a.out  test.cpp
