# add_executable(test_create_data_bin test_create_data_bin.cpp)
# add_executable(test_binary test_binary.cpp)
# add_executable(test_cosine_dis test_cosine_dis.cpp)
# add_executable(test_type test_data_type.cpp)
# add_executable(test_kmean test_kmean.cpp)
# add_executable(test_gen_blabels test_gen_blabels.cpp)
# add_executable(test_word_occurrence test_word_occurrence.cpp)
# add_executable(test_img_browser test_img_browser.cpp)
# add_executable(test_creat_result test_creat_result.cpp)
add_executable(test_dic_binary test_dic_binary.cpp)

# target_link_libraries(test_create_data_bin utils convert_dataset)
# target_link_libraries(test_binary utils convert_dataset)
# target_link_libraries(test_cosine_dis utils)
# target_link_libraries(test_type utils convert_dataset ${OpenCV_LIBS})
# target_link_libraries(test_kmean bow_dictionary ${OpenCV_LIBS})
# target_link_libraries(test_gen_blabels utils convert_dataset bow_dictionary histogram)
# target_link_libraries(test_word_occurrence utils convert_dataset bow_dictionary histogram)
# target_link_libraries(test_img_browser utils image_browser)
# target_link_libraries(test_creat_result utils histogram image_browser)
target_link_libraries(test_dic_binary utils convert_dataset bow_dictionary histogram)