# add_executable(test_func test_func.cpp)
# add_executable(test test.cpp)
# add_executable(learncv learncv.cpp)
add_executable(test_k test_k.cpp)
# add_executable(test_dis test_dis.cpp)
add_executable(test_convert test_convert.cpp)

# target_link_libraries(test_func ${OpenCV_LIBS})
# target_link_libraries(test utils ${OpenCV_LIBS} kmeans)
# target_link_libraries(learncv ${OpenCV_LIBS})
target_link_libraries(test_k ${OpenCV_LIBS} kmeans)
# target_link_libraries(test_dis ${OpenCV_LIBS} utils)
target_link_libraries(test_convert serialization utils bow_dictionary)